# qr-ems

./: .gitignore  GEMINI.md  LOGIC_REFACTOR_SUMMARY.md  Makefile  README.md  devbox.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tunnel_config.prod.yml  tunnel_config.yml
backend/: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  api.md  fix_borrowed_data.py  generate_test_data.py  pyproject.toml
backend/apps/common/: utils.py
backend/apps/equipment/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/equipment/migrations/: 0001_initial.py  0002_alter_equipment_options_equipment_category_and_more.py  0003_alter_equipment_category.py  0004_equipment_cabinet_equipment_image_equipment_number_and_more.py  0005_equipment_location.py  0006_alter_equipment_status.py  0007_equipment_target_location.py  0008_equipment_target_cabinet_equipment_target_number_and_more.py  0009_category_remove_equipment_category.py  0010_equipment_category.py  0011_alter_equipment_status.py  0012_alter_equipment_status.py  0013_alter_equipment_status.py
backend/apps/locations/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/locations/migrations/: 0001_initial.py
backend/apps/transactions/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/transactions/migrations/: 0001_initial.py  0002_initial.py  0003_transaction_image.py  (+4 more)
backend/apps/users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/config/: settings.py  urls.py
(+63 files in other folders)
