[project]
name = "qr-ems-backend"
version = "0.1.0"
description = "QR-EMS Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "psycopg[binary]>=3.1",
    "python-decouple>=3.8",
    "qrcode>=7.4",
    "rdflib>=7.0",
    "pillow>=10.0.0",
    "gunicorn>=21.2.0",
    "dj-database-url>=3.0.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-auth>=2.43.0",
    "requests>=2.32.5",
    "django-cors-headers>=4.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
